css/main.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

#map {
    width: 100vw;
    height: 100vh;
    max-width: 100%;
}

#pano {
    width: 400px;
    height: 400px;
}

#nav-button {
    padding: 5px 15px;
    position: fixed;
    left: 0;
    top: 0;
    z-index: 1;
}

#nav-button div {
    width: 32px;
    height: 3px;
    margin: 7px 0;
    background-color: black;
}

#nav-button:hover {
    cursor: pointer;
}

#nav-button:hover div {
    background-color: #9e9e9e;
}

#nav-panel {
    opacity: 0.6;
    display: none;
    text-align: center;
    position: fixed;
    left: 0;
    top: 0;
    width: 10vw;
    height: 100vh;
    background: black;
    z-index: 2;
}

#nav-panel li {
    padding: 10px;
    text-decoration: none;
    color: white;
}

#nav-panel li:nth-child(n+3):hover {
    background: #9E9E9E;
    cursor: pointer;
}

#nav-panel li:first-child {
    background: green;
}

#nav-panel li:first-child:hover {
    background: #8bc34a;
    cursor: pointer;
}

#search-box input {
    margin-top: 10px;
    height: 29px;
    width: 100%;
    padding: 0 12px 0 30px;
    background: white url("../imgs/search.svg") 2px 1px no-repeat;
    border: 1px solid;
    border-color: #a8acbc #babdcc #c0c3d2;
    border-radius: 13px;
}

#search-box input:focus {
    outline: 0;
}

